--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
     <item name="ambient.on">0.1</item>
-    <item name="screen.on.display0">62.66</item>
-    <item name="screen.full.display0">503.67</item>
+    <item name="screen.on">62.66</item>
+    <item name="screen.full">503.67</item>
     <item name="bluetooth.active">17.85</item>
     <item name="bluetooth.on">1.35</item>
     <item name="wifi.on">0.96</item>
@@ -123,6 +123,7 @@
         <value>2649600</value>
         <value>2745600</value>
         <value>2841600</value>
+        <value>3187200</value>
     </array>
     <array name="cpu.core_power.cluster2">
         <value>105.19</value>
@@ -145,18 +146,21 @@
         <value>409.84</value>
         <value>443.27</value>
         <value>493.34</value>
+        <value>677.24</value>
     </array>
     <item name="cpu.idle">12.91</item>
     <item name="cpu.suspend">7.85</item>
     <array name="memory.bandwidths">
         <value>22.7</value>
     </array>
-    <item name="battery.capacity">4520</item>
-    <item name="wifi.controller.idle">0</item>
-    <item name="wifi.controller.rx">0</item>
-    <item name="wifi.controller.tx">0</item>
-    <array name="wifi.controller.tx_levels" />
-    <item name="wifi.controller.voltage">0</item>
+    <item name="battery.capacity">4500</item>
+    <item name="wifi.controller.idle">1</item>
+    <item name="wifi.controller.rx">176</item>
+    <item name="wifi.controller.tx">200</item>
+    <array name="wifi.controller.tx_levels">
+        <value>1</value>
+    </array>
+    <item name="wifi.controller.voltage">3700</item>
     <array name="wifi.batchedscan">
         <value>.0002</value>
         <value>.002</value>
